# journalktl

./: CMakeLists.txt  README  config.h.cmake
src/: CMakeLists.txt  journalentry.h  journalktlui.rc  journalmodel.cpp  journalmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  sortfiltermodel.cpp  sortfiltermodel.h
ui/: mainwindow.ui
